TypeChecker ForLoop